public/css/app.css
body{
    background-color: #222;
    font-size: 16px;
}

.ui {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    pointer-events: none;
}
.ui .section-top {
    position: fixed;
    display: flex;
    top: 20px;
    left: 20px;
}
.ui .section-left {
    position: fixed;
    display: flex;
    top: 80px;
    left: 20px;
}
.spacer {
    width: 20px;
    height: 20px;
}

.toolbar{
    display: flex;
    background-color: white;
    border-radius: 3px;
    pointer-events: all;
    box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
}
.toolbar.transparent {
    background-color: transparent;
    box-shadow: none;
}
.toolbar.horizontal {
    flex-direction: row;
    align-items: center;
}
.toolbar.vertical {
    flex-direction: column;
    justify-content: center;
}

.toolbar-group {
    display: flex;
}
.toolbar-group.horizontal { flex-direction: row; }
.toolbar-group.vertical { flex-direction: column; }

.toolbar-button {
    border: 0;
    outline: 0;
    background-color: transparent;
    position: relative;
    font-size: 20px;
    width: 40px;
    height: 40px;
    cursor: pointer;
}
.toolbar-button.active{
    background-color: #fc8210 !important;
    color: white !important;
}
.toolbar-button:hover{
    background-color: rgba(0, 0, 0, 0.1);
}
.toolbar-button i{
    pointer-events: none;
}
.toolbar.vertical > .toolbar-button:first-child {
    border-top-left-radius: 3px;
    border-top-right-radius: 3px;
}
.toolbar-button > .toolbar-button-tooltip {
    position: absolute;
    background-color: #ddd;
    box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
    border-radius: 3px;
    pointer-events: none;
    font-size: 1rem;
    padding: 0 10px;
    opacity: 0;
    transition: opacity 0.2s ease-in-out;
}
.toolbar-button:hover >.toolbar-button-tooltip {
    opacity: 1;
}
.toolbar-button > .toolbar-button-tooltip.bottom {
    top: 100%;
    left: 50%;
    margin-top: 10px;
    transform: translateX(-50%);
}
.toolbar-button > .toolbar-button-tooltip.right {
    top: 50%;
    left: 100%;
    margin-left: 10px;
    transform: translateY(-50%);
}

.toolbar-popup{
    position: relative;
}
.toolbar-popup-content{
    display: none;
    position: absolute;
    top: 0;
    left: 100%;
    background-color: white;
    border-top-right-radius: 3px;
    border-bottom-right-radius: 3px;
    border-left: 1px solid rgba(0, 0, 0, 0.2);
    overflow: hidden;
}
.toolbar-popup:hover .toolbar-popup-content{
    display: block;
}

.toolbar-textfield {
    position: relative;
    margin: 0 10px;
    font-weight: 600;
}
.toolbar-textfield input{
    display: none;
    width: 200px;
    height: 27px;
    border: 0;
    outline: 0;
    background-color: transparent;
    font-weight: 600;
    font-size: 1rem;
}
.toolbar-textfield span{
    cursor: pointer;
}

.toolbar-separator{
    width: 1px;
    height: 20px;
    margin: 10px 5px;
    background-color: rgba(0, 0, 0, 0.1);
    flex-shrink: 0;
}
.toolbar.vertical .toolbar-separator{
    width: 20px;
    height: 1px;
    margin: 5px 10px;
    background-color: rgba(0, 0, 0, 0.1);
}

.toolbar-user {
    width: 30px;
    height: 30px;
    margin: 5px 5px;
    border-radius: 50%;
    background-color: white;
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 0.8rem;
    box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
    user-select: none;
    -moz-user-select: -moz-none;
    pointer-events: none;
}
.toolbar-button.afk .toolbar-user{
    background-color: #bbb;
    opacity: 0.75;
}
.toolbar#users .toolbar-button{
    background-color: transparent !important;
}

.toolbar#users .toolbar-button:not(:first-child) {
    margin-left: -20px;
    transition: margin-left 0.2s ease-in-out;
}
.toolbar#users:hover .toolbar-button:not(:first-child) {
    margin-left: 0;
}

.toolbar-color{
    display: inline-block;
    width: 20px;
    height: 20px;
    border-radius: 100px;
    background-color: currentColor;
    border: 1px solid rgba(0, 0, 0, 0.2);
    pointer-events: none;
}
.toolbar-text{
    display: block;
    font-size: 10px;
    text-align: center;
    opacity: 0.5;
    font-weight: 600;
    margin: 5px 5px;
}

.windows {
    display: none;
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    pointer-events: all;
    background-color: rgba(0, 0, 0, 0.2);
}

.window {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: white;
    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
    border-radius: 5px;
    z-index: 1;
    pointer-events: all;
    padding: 20px;
    width: 50vw;
}

.window-header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 20px;
}
.window-close-button {
    border: 0;
    outline: 0;
    background-color: transparent;
    font-size: 24px;
    width: 32px;
    height: 32px;
    border-radius: 3px;
    cursor: pointer;
}
.window-close-button:hover {
    background-color: rgba(0, 0, 0, 0.1);
}

.window .button {
    border: 0;
    outline: 0;
    background-color: #686868;
    padding: 5px 20px;
    border-radius: 3px;
    color: white;
    font-size: 1rem;
    transition: background-color 0.2s;
    cursor: pointer;
}
.window .button.primary {
    background-color: #fc8210;
}
.window .button:hover {
    background-color: #505050;
}
.window .button.primary:hover {
    background-color: #d86d09;
}

#editor{
    width: 50vw;
    height: 30vh;
}


.range{
    padding: 10px;
    width: 100%;
    min-width: 220px;
}
.range span{
    display: block;
    white-space: nowrap;
    margin-right: 10px;
    margin-bottom: 5px;
    text-transform: uppercase;
    font-size: 0.75rem;
    font-weight: 600;
    letter-spacing: 2px;
    opacity: 0.5;
}
.range input{
    width: 100%;
    outline: 0;
    border: 0;
    background-color: transparent;

    -webkit-appearance: none;
    cursor: ew-resize;
}
.range input:focus{
    outline: none;
}
.range input::-webkit-slider-thumb{
    -webkit-appearance: none;
}
.range input::-webkit-slider-thumb,
.range input::-moz-range-thumb{
    -webkit-appearance: none;
    height: 16px;
    width: 16px;
    border-radius: 100px;
    background-color: black;
    border: 0;
    outline: 0;
    margin-top: -1px;
}
.range input:active::-webkit-slider-thumb,
.range input:active::-moz-range-thumb{
    background-color: #fc8210;
}
.range input::-webkit-slider-runnable-track,
.range input::-moz-range-track{
    width: 100%;
    height: 5px;
    background-color: rgba(0, 0, 0, 0.2);
    border-radius: 100px;
}

.checkbox input {
    margin-right: 10px;
}

.spinbox label {
    margin-right: 10px;
}
.spinbox input {
    padding: 5px;
    background-color: rgba(0, 0, 0, 0.1);
    border: 0;
    border-radius: 3px;
    width: 50px;
    outline: 0;
}


.overlays {
    pointer-events: none;
    z-index: 999;
    position: fixed;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
}
.start-hint{
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    color: white;
    opacity: 0.2;
    display: flex;
    flex-direction: column;
    align-items: center;
    font-weight: bold;
    text-align: center;
}
.start-hint i{
    font-size: 70px;
    margin-bottom: 20px;
}

#text-tool-textarea{
    position: fixed;
    z-index: 99;
    border: 0;
    outline: 0;
    background-color: transparent;
    /* margin-top: -0.15em; */
    font-family: Arial;
    line-height: 1em;
    resize: none;
}

.export-preview-row {
    display: flex;
    justify-content: center;
    align-items: center;
}
.export-padding-input {
    display: flex;
    padding: 10px;
    width: 50px;
    align-items: center;
}
.export-padding-input input {
    border: 0;
    outline: 0;
    background-color: transparent;
    text-align: right;
    width: 25px;
    -moz-appearance: textfield;
    font-size: 1rem;
}
.export-padding-input input::-webkit-outer-spin-button,
.export-padding-input input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
.export-padding-input span {
    opacity: 0.5;
    width: 25px;
    padding-left: 3px;
}

.export-preview img {
    max-width: 40vw;
    max-height: 30vh;
}

.export-settings {
    margin-bottom: 10px;
}

@media only screen and (max-width: 720px) {
    .toolbar {
        border-radius: 0;
    }
    .spacer {
        width: 0;
        height: 0;
    }
    .toolbar.vertical > .toolbar-button:first-child {
        border-top-left-radius: 0px;
        border-top-right-radius: 0px;
    }
    .toolbar-textfield span {
        white-space: nowrap;
        display: inline-block;
        max-width: calc(100vw - 270px);
        overflow-x: hidden;
        text-overflow: ellipsis;
    }
    .ui .section-top {
        top: 0px;
        left: 0px;
        right: 0;
        flex-direction: column;
    }

    .ui .section-left {
        top: unset;
        left: 0;
        bottom: 0;
        right: 0;
    }
    .section-left .toolbar {
        flex-direction: row;
        align-items: center;
    }
    .toolbar.vertical .toolbar-separator {
        width: 1px;
        height: 20px;
        margin: 10px 5px;
    }

    .toolbar-popup-content{
        position: fixed;
        top: unset;
        left: 0;
        right: 0;
        bottom: 40px;
        border-top-right-radius: 0px;
        border-bottom-right-radius: 0px;
        border-left: 0;
    }
    .toolbar-group {
        justify-content: center;
    }

    .window {
        width: 80vw;
    }
}

